<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0f0f0f">

    <TextView
        android:id="@+id/tv_title"
        style="@style/MainTitle"
        android:layout_width="wrap_content"
        android:background="#0f0f0f"
        android:paddingStart="24dp"
        android:text="@string/main_menu_history"
        app:layout_constraintEnd_toStartOf="@+id/tv_complete"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_complete"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/history_total_count"
        android:textColor="#b2b2b2"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_title"
        app:layout_constraintEnd_toStartOf="@+id/tv_complete_cnt"
        app:layout_constraintStart_toEndOf="@+id/tv_title"
        app:layout_constraintTop_toTopOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_complete_cnt"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:text="0"
        android:textColor="@color/colorWhite"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_title"
        app:layout_constraintEnd_toStartOf="@+id/tv_count"
        app:layout_constraintStart_toEndOf="@+id/tv_complete"
        app:layout_constraintTop_toTopOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_count"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/history_count_end_fix"
        android:textColor="#b2b2b2"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_title"
        app:layout_constraintEnd_toStartOf="@+id/view_divider"
        app:layout_constraintStart_toEndOf="@+id/tv_complete_cnt"
        app:layout_constraintTop_toTopOf="@+id/tv_title" />

    <View
        android:id="@+id/view_divider"
        android:layout_width="2dp"
        android:layout_height="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/colorWhite20"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/tv_title"
        app:layout_constraintEnd_toStartOf="@+id/tv_cancel"
        app:layout_constraintStart_toEndOf="@+id/tv_complete_cnt"
        app:layout_constraintTop_toTopOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginEnd="6dp"
        android:gravity="center"
        android:text="@string/history_cancel"
        android:textColor="#b2b2b2"
        android:textSize="20dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/tv_title"
        app:layout_constraintEnd_toStartOf="@+id/tv_cancel_cnt"
        app:layout_constraintStart_toEndOf="@+id/view_divider"
        app:layout_constraintTop_toTopOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_cancel_cnt"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="@string/history_count_def"
        android:textColor="@color/colorWhite"
        android:textSize="20dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/tv_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_cancel"
        app:layout_constraintTop_toTopOf="@+id/tv_title" />

    <Button
        android:id="@+id/btn_filter"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:button="@null"
        android:text="@string/history_call_type_all"
        android:textColor="@color/colorMainGold"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_title" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_history"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="top|start"
        android:paddingTop="13dp"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        tools:listitem="@layout/item_operation_history_detail_list" />

    <TextView
        android:id="@+id/operation_empty_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/history_empty"
        android:textColor="#dab668"
        android:textSize="40dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>