<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/my_info_title"
        style="@style/MainTitle"
        android:paddingStart="24dp"
        android:paddingEnd="0dp"
        android:text="@string/d_menu_my_info"
        app:layout_constraintBottom_toTopOf="@+id/sv_my_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/sv_my_info"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_info_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0f0f0f"
            android:paddingStart="24dp"
            android:paddingEnd="24dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="200dp" />

            <!--이름-->
            <TextView
                android:id="@+id/tv_name_label"
                style="@style/MyInfoLabelTextStyle"
                android:layout_marginTop="13dp"
                android:text="@string/my_info_name"
                app:layout_constraintBottom_toTopOf="@+id/tv_driver_num_label"
                app:layout_constraintEnd_toStartOf="@+id/gl_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tv_name"
                style="@style/MyInfoTextStyle"
                android:text="김팅크"
                app:layout_constraintBottom_toBottomOf="@+id/tv_name_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/gl_vertical"
                app:layout_constraintTop_toTopOf="@+id/tv_name_label" />

            <!--전화번호-->
            <TextView
                android:id="@+id/tv_driver_num_label"
                style="@style/MyInfoLabelTextStyle"
                android:text="@string/my_info_phone_number"
                app:layout_constraintBottom_toTopOf="@+id/tv_company_label"
                app:layout_constraintEnd_toStartOf="@+id/gl_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name_label" />

            <TextView
                android:id="@+id/tv_driver_num"
                style="@style/MyInfoTextStyle"
                android:text="01050556980"
                app:layout_constraintBottom_toBottomOf="@+id/tv_driver_num_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/gl_vertical"
                app:layout_constraintTop_toTopOf="@+id/tv_driver_num_label" />

            <!--소속회사-->
            <TextView
                android:id="@+id/tv_company_label"
                style="@style/MyInfoLabelTextStyle"
                android:text="@string/my_info_company"
                app:layout_constraintBottom_toTopOf="@+id/tv_vehicle_number_label"
                app:layout_constraintEnd_toStartOf="@+id/gl_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_driver_num_label" />

            <TextView
                android:id="@+id/tv_company"
                style="@style/MyInfoTextStyle"
                android:text="인천 리무진 택시"
                app:layout_constraintBottom_toBottomOf="@+id/tv_company_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/gl_vertical"
                app:layout_constraintTop_toTopOf="@+id/tv_company_label" />

            <!--차량번호-->
            <TextView
                android:id="@+id/tv_vehicle_number_label"
                style="@style/MyInfoLabelTextStyle"
                android:text="@string/my_info_vehicle_number"
                app:layout_constraintBottom_toTopOf="@+id/tv_vehicle_model_label"
                app:layout_constraintEnd_toStartOf="@+id/gl_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_company_label" />

            <TextView
                android:id="@+id/tv_vehicle_number"
                style="@style/MyInfoTextStyle"
                android:text="20바8282"
                app:layout_constraintBottom_toBottomOf="@+id/tv_vehicle_number_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/gl_vertical"
                app:layout_constraintTop_toTopOf="@+id/tv_vehicle_number_label" />

            <!--차량모델-->
            <TextView
                android:id="@+id/tv_vehicle_model_label"
                style="@style/MyInfoLabelTextStyle"
                android:text="@string/my_info_vehicle_model"
                app:layout_constraintBottom_toTopOf="@+id/tv_vehicle_color_label"
                app:layout_constraintEnd_toStartOf="@+id/gl_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_vehicle_number_label" />

            <TextView
                android:id="@+id/tv_vehicle_model"
                style="@style/MyInfoTextStyle"
                android:text="BMW"
                app:layout_constraintBottom_toBottomOf="@+id/tv_vehicle_model_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/gl_vertical"
                app:layout_constraintTop_toTopOf="@+id/tv_vehicle_model_label" />

            <!--차량색상-->
            <TextView
                android:id="@+id/tv_vehicle_color_label"
                style="@style/MyInfoLabelTextStyle"
                android:text="@string/my_info_vehicle_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/gl_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_vehicle_model_label" />

            <TextView
                android:id="@+id/tv_vehicle_color"
                style="@style/MyInfoTextStyle"
                android:text="흰색"
                app:layout_constraintBottom_toBottomOf="@+id/tv_vehicle_color_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/gl_vertical"
                app:layout_constraintTop_toTopOf="@+id/tv_vehicle_color_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>